--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,8 +5,7 @@
     });
 
 %ol.breadcrumb
-  %li=link_to "Home", "javascript:void(0);"
-  %li.active=link_to "Teste", "javascript:void(0);"
+  %li.active=link_to "Home", "javascript:void(0);"
 
 .col-xs-7.metas
   %h1.h1-home Metas
