--- a/app/views/orders/show.html.haml
+++ b/app/views/orders/show.html.haml
@@ -13,7 +13,7 @@
                    
 .col-xs-7.comunicados
   %h3 Cliente
-  %h2.details=@proposal.contact_id
+  %h2.details=@proposal.contact.name
   
   %h3 Email
   %h2.details=@proposal.email
