--- a/app/views/proposals/index.html.haml
+++ b/app/views/proposals/index.html.haml
@@ -50,4 +50,4 @@
               %span.reprovado Reprovado
             - when 3
               %span.aprovado Aprovado
-        %td=link_to "Detalhes", edit_proposal_path(p), :class => "red"
+        %td=link_to "Detalhes", edit_proposal_path(p), :class => "btn btn-default "
