--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -281,6 +281,11 @@ h4
   color:$mainColor;
 }
 
+.active
+{
+  color:$mainColor !important;
+}
+
 /* CELULAR */
 @media only screen and (max-width: 768px) {
 	.user-name
