--- a/app/views/proposals/_footer_pdf.html.haml
+++ b/app/views/proposals/_footer_pdf.html.haml
@@ -1,4 +1,4 @@
-.footer{:style => "width:100%; height:28px; border-top:2px solid #a20101; margin-top:20px;"}
-  %p{:style => "width:33%; display:inline-block; text-align:center;"} LYTHOS INDUSTRIA E COMERCIO DE ARTEFATOS DE CIMENTO LTDA 
-  %p{:style => "width:33%; display:inline-block; text-align:center;"} www.lythos.com.br
-  %p{:style => "width:33%; display:inline-block; text-align:center;"} contato@lythos.com.br 
+.footer{:style => "width:100%;"}
+  =wicked_pdf_image_tag "template_pdf/bg_footer.jpg", :align => "right"
+  %p{:style => "width:600px; display:inline-block; text-align:center; margin-top:70px;"} 
+    LYTHOS INDUSTRIA E COMERCIO DE ARTEFATOS DE CIMENTO LTDA - www.lythos.com.br 
