--- a/app/views/proposals/generate_pdf.html.haml
+++ b/app/views/proposals/generate_pdf.html.haml
@@ -1,7 +1,8 @@
-.container{:style => "width:850px;"}
+.container{:style => "width:850px;"}    
+  .main_content{:style => "margin-top:0px;"}
+    =wicked_pdf_image_tag "template_pdf/header.jpg"
+    %br/
   
-      
-  .main_content{:style => "margin-top:40px;"}
     À <br />
     =@proposal.contact.name 
     <br />
