--- a/app/views/proposals/calculator.html.haml
+++ b/app/views/proposals/calculator.html.haml
@@ -1,9 +1,9 @@
 .row
   .col-xs-12
     %h1 Calculadora
-  
+    %p Para saber quantas peças você precisa para uma determinada metragem, preencha as informações abaixo.
   .col-xs-6.a
-    %h2 Informações do Telhado
+    
     %p 
       Telha
       %select.form-control{:id => "produto"}
