Austes permissões de usuarios e folha de orçamento

--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -61,7 +61,7 @@
       .col-sm-12.data-box
         .col-sm-12.info-box
           .col-sm-4
-            = link_to (image_tag("template/profile_pic.jpg", :class =>"picture-list"), contact_path(contact))
+            = link_to (image_tag("template/company-building-icon.png", :class =>"picture-list", :width => "80"), contact_path(contact))
           .col-sm-8
             %h2=contact.name
             %p 
