--- a/app/views/layouts/proposal.html.haml
+++ b/app/views/layouts/proposal.html.haml
@@ -16,6 +16,19 @@
       font-size:12px;
     }
     
+    table
+    {
+      width:850px;
+    }
+    
+    table.pedidos tbody tr:nth-child(odd){
+       background-color: #E9E9E9;
+    }
+    
+    table.pedidos tbody tr td{
+      padding:5px 0px 5px 0px;
+    }
+    
   :javascript
     function number_pages() {
             var vars={};
