--- a/app/views/proposals/index.html.haml
+++ b/app/views/proposals/index.html.haml
@@ -3,7 +3,7 @@
   %li.active=link_to "Orçamentos", "javascript:void(0);"
 
 .row
-  .col-xs-9
+  .col-xs-9.a
     %h1 Orçamentos
   .col-xs-3
     =link_to "+ Orçamento", new_proposal_path, :class => "btn btn-default pull-right header-button"
@@ -29,6 +29,7 @@
     %tr
       %th ID
       %th Cliente
+      %th Enviado por
       %th Valor
       %th Data
       %th Status
@@ -40,6 +41,8 @@
       %tr
         %td=p.id
         %td=link_to p.contact.name, contact_path(p.contact.id), :class => "red"
+        %td
+          %span.label.label-info=p.user.username
         %td=number_to_currency($total_items)
         %td=p.created_at.strftime("%d/%m/%Y")
         %td 
