--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -20,7 +20,7 @@
         Logo da sua empresa:
         =f.file_field :company_logo, :class => "form-control"
         
-      - if @user.has_role?(:administrator)
+      - if current_user.has_role?(:administrator)
         %h2=t(".permission")
         =f.radio_button :role, :administrator
         =t(".administrator") 
