--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -26,7 +26,7 @@
 .col-xs-5.ultimos-pedidos
   %h1.h1-home Últimos Pedidos
   
-  %table.table.table-condensed
+  %table.table.table-condensed.a
     %tr
       %th
       %th Para
@@ -69,4 +69,4 @@
           Buscar
   
   .banner
-    = link_to image_tag("template/banner_biblioteca.jpg", :class => "img-responsive"), libraries_path
+    =# link_to image_tag("template/banner_biblioteca.jpg", :class => "img-responsive"), libraries_path
