--- a/app/views/user_mailer/proposal_send.html.haml
+++ b/app/views/user_mailer/proposal_send.html.haml
@@ -12,8 +12,8 @@
   %body
     %table{:border => "0", :cellpadding=> "0", :cellspacing=> "0", :width=> "600"}
       %tr
-        %td{:align=> "right", :height=> "28", :style=> "border-bottom:2px solid #333333; background-color:#272727;"}
-          = image_tag("http://lythos.korewa.com.br/assets/template/logo-89574db7feb76eb409c872d914e69d55.jpg", :vspace => "5", :hspace => "5")
+        %td{:align=> "right", :height=> "28"}
+          = image_tag("http://lythos.korewa.com.br/assets/template/header_mail.jpg")
       %tr
         %td{:align=> "left"}
           %br/
