--- a/app/views/proposals/calculator.html.haml
+++ b/app/views/proposals/calculator.html.haml
@@ -22,7 +22,7 @@
       %input.form-control{:type => "text", :id => "cumprimento", :placeholder => "10"}
       
       Inclinação
-      %input.form-control{:type => "text", :id => "inclinacao", :placeholder => "30% - 60%"}
+      %input.form-control{:type => "text", :id => "inclinacao", :placeholder => "30% - 60%", :value => "30%"}
       
       %a.btn.btn-default{:href => "javascript:void(0);", :id=>"btn_calcular", :onclick => "CalculaMetragem()"} Calcular
       
